[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/0x72_DungeonTilesetII_v1.4/frames/ui_heart_full.png" type="Texture" id=1]
[ext_resource path="res://Hearts.gd" type="Script" id=2]

[node name="CanvasLayer" type="CanvasLayer"]
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 0, 0 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -598.0
margin_top = -2.5
margin_right = -478.0
margin_bottom = 37.5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 120.0
margin_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_right = 16.0
margin_bottom = 40.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 40.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_left = 40.0
margin_right = 56.0
margin_bottom = 40.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 76.0
margin_bottom = 40.0
texture = ExtResource( 1 )
stretch_mode = 4
